--- a/.gitignore
+++ b/.gitignore
@@ -199,7 +199,7 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer,
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+ .vscode/
 
 # Ruff stuff:
 .ruff_cache/
@@ -215,4 +215,6 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 
-_DEV_/
+
+_DEV_
+.kilocode
